retrieve_ENO_DEV1/objects/Split__c.object
<CustomObject>
    <fields>
        <fullName>Account_No__c</fullName>
        <label>NL Account Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Date__c</fullName>
        <label>Batch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_ID__c</fullName>
        <label>CRM ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Document_No__c</fullName>
        <label>Nominal Ledger Posting Ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name (or Organisation Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gen_Posting_Type__c</fullName>
        <label>VAT4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gen_Prod_Posting_Group__c</fullName>
        <label>VAT3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>npe01__OppPayment__c</referenceTo>
        <relationshipName>Splits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Post_Status__c</fullName>
        <label>Post Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Not Posted</fullName>
                </value>
                <value>
                    <fullName>Do Not Post</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shortcut_Dimension_1_Code__c</fullName>
        <label>Department Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shortcut_Dimension_2_Code__c</fullName>
        <label>Project Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surname__c</fullName>
        <label>Surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Bus_Posting_Group__c</fullName>
        <label>VAT2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Prod_Posting_Group73912_XP__c</fullName>
        <label>VAT1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Split</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Shortcut_Dimension_1_Code__c</columns>
        <columns>Account_No__c</columns>
        <columns>External_Document_No__c</columns>
        <columns>Shortcut_Dimension_2_Code__c</columns>
        <columns>VAT_Prod_Posting_Group73912_XP__c</columns>
        <columns>VAT_Bus_Posting_Group__c</columns>
        <columns>Amount__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPLIT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments Split</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>